clusters/cl01tl/manifests/traefik/ValidatingAdmissionPolicyBinding-safe-upgrades.gateway.networking.k8s.io.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  annotations:
    app.kubernetes.io/managed-by: Helm
    gateway.networking.k8s.io/bundle-version: v1.5.0-dev
    gateway.networking.k8s.io/channel: standard
    helm.sh/resource-policy: keep
  labels:
    app.kubernetes.io/managed-by: Helm
  name: safe-upgrades.gateway.networking.k8s.io
spec:
  matchResources:
    resourceRules:
      - apiGroups:
          - apiextensions.k8s.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - customresourcedefinitions
  policyName: safe-upgrades.gateway.networking.k8s.io
  validationActions:
    - Deny
